add host terms and condition
