# src/app/modules/hostterms/hostterms.model.ts
@@ -1,0 +1,19 @@
+import { Schema, model } from 'mongoose';
+import { IHostterms, HosttermsModel } from './hostterms.interface'; 
+
+const sectionsItemSchema = new Schema({
+  title: { type: String },
+  content: { type: String },
+}, { _id: false });
+
+const hosttermsSchema = new Schema<IHostterms, HosttermsModel>({
+  hostId: { type: Schema.Types.ObjectId, ref: 'User' },
+  propertyId: { type: Schema.Types.ObjectId, ref: 'Property' },
+  isDefault: { type: Boolean , default : false},
+  sections: [sectionsItemSchema],
+  lastUpdated: { type: Date },
+}, {
+  timestamps: true
+});
+
+export const Hostterms = model<IHostterms, HosttermsModel>('Hostterms', hosttermsSchema);
