# src/routes/index.ts
@@ -7,6 +7,7 @@ import { PlanRoutes } from '../app/modules/plan/plan.routes'
 import { SubscriptionRoutes } from '../app/modules/subscription/subscription.routes'
 import { StatsRoutes } from '../app/modules/stats/stats.route'
 import { PropertyRoutes } from '../app/modules/property/property.route'
+import { HosttermsRoutes } from '../app/modules/hostterms/hostterms.route'
 
 const router = express.Router()
 
@@ -18,7 +19,8 @@ const apiRoutes: { path: string; route: Router }[] = [
   { path: '/plan', route: PlanRoutes },
   { path: '/subscription', route: SubscriptionRoutes },
   { path: '/stats', route: StatsRoutes },
-  { path: '/property', route: PropertyRoutes }]
+  { path: '/property', route: PropertyRoutes },
+  { path: '/hostterms', route: HosttermsRoutes }]
 
 apiRoutes.forEach(route => {
   router.use(route.path, route.route)
